chore: enable javafmt for api modules